--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   firebase_core: ^2.1.0
   cloud_firestore: ^4.0.2
   flutter_secure_storage: ^6.0.0
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
