--- a/.gitignore
+++ b/.gitignore
@@ -43,5 +43,6 @@ app.*.map.json
 
 # Android Studio will place build artifacts here
 /android/app/debug
+/android/app/build
 /android/app/profile
 /android/app/release
