--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,11 +48,13 @@ dependencies:
   mobile_scanner: ^2.0.0
   skeletons: ^0.0.3
   equatable: ^2.0.5
+  flutter_secure_storage: ^6.0.0
+  google_nav_bar: ^5.0.6
+  permission_handler: ^10.2.0
   firebase_auth: ^4.1.1
   firebase_core: ^2.1.1
   cloud_firestore: ^4.0.4
-  flutter_secure_storage: ^6.0.0
-  google_nav_bar: ^5.0.6
+
 
 dev_dependencies:
   flutter_launcher_icons: ^0.10.0
