new adaptive icon

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,10 +75,9 @@ dev_dependencies:
 flutter_icons:
   ios: true
   android: true
-  image_path_ios: "assets/launcher/icon.png"
-  image_path_android: "assets/launcher/icon.png"
-  # adaptive_icon_background: "assets/launcher/background.png"
-  # adaptive_icon_foreground: "assets/launcher/foreground.png"
+  image_path: "assets/launcher/icon.png"
+  adaptive_icon_background: "assets/launcher/background.png"
+  adaptive_icon_foreground: "assets/launcher/foreground.png"
 flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
