--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.1.0+1
 
 environment:
   sdk: ">=2.18.2 <3.3.7"
@@ -54,7 +54,7 @@ dependencies:
   firebase_auth: ^4.1.1
   firebase_core: ^2.1.1
   cloud_firestore: ^4.0.4
-
+  group_button: ^5.2.2
 
 dev_dependencies:
   flutter_launcher_icons: ^0.10.0
