--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,10 @@ dependencies:
   firebase_core: ^2.1.1
   cloud_firestore: ^4.0.4
   group_button: ^5.2.2
-
+  jwt_decoder: ^2.0.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  
 dev_dependencies:
   flutter_launcher_icons: ^0.10.0
   flutter_test:
