--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,22 +45,26 @@ dependencies:
   mask_text_input_formatter: ^2.4.0
   intl: ^0.17.0
   flutter_slidable: ^2.0.0
-  mobile_scanner: ^2.0.0
+  mobile_scanner: ^3.0.0-beta.4
   skeletons: ^0.0.3
   equatable: ^2.0.5
-  flutter_secure_storage: ^6.0.0
+  flutter_secure_storage: ^7.0.1
   google_nav_bar: ^5.0.6
   permission_handler: ^10.2.0
-  firebase_auth: ^4.1.1
-  firebase_core: ^2.1.1
-  cloud_firestore: ^4.0.4
+  cloud_firestore: ^4.3.1
+  firebase_core: ^2.4.1
+  firebase_auth: ^4.2.4
+  google_mlkit_barcode_scanning: ^0.5.0
   group_button: ^5.2.2
   jwt_decoder: ^2.0.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  
+
+dependency_overrides:
+  firebase_core_platform_interface: 4.5.2
+
 dev_dependencies:
-  flutter_launcher_icons: ^0.10.0
+  flutter_launcher_icons: ^0.11.0
   flutter_test:
     sdk: flutter
 
