--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,9 @@ dependencies:
   jwt_decoder: ^2.0.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  firebase_messaging: ^14.2.1
 
+  
 dependency_overrides:
   firebase_core_platform_interface: 4.5.2
 
