--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -6,6 +6,8 @@
 	<string>921959811180-n5a0i6aoriq4tsnlg86g278pemkft429.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.921959811180-n5a0i6aoriq4tsnlg86g278pemkft429</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>921959811180-7g13trobqq85leafqtf0s8581tgcfmp3.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyASFWVk0xdpJQZ0-IX2F9PQO6K6OQneXQE</string>
 	<key>GCM_SENDER_ID</key>
