--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   firebase_messaging: ^14.2.1
+  cached_network_image: ^3.2.3
 
   
 dependency_overrides:
