change strings in ios info.plist

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -50,11 +50,11 @@
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>Esse app precisa de acesso a localização.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>This app needs access to location when in the background.</string>
+	<string>O aplicativo precisa acessar sua localização para melhor experiência.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>This app needs access to location when open.</string>
+	<string>O aplicativo precisa acessar sua localização para melhor experiência.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Upload images for screen background</string>
+	<string>O aplicativo precisa acessar suas fotos para usá-lo em seus dados personalizados.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
