ädded delete account option in profile modal

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -52,7 +52,7 @@
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>O aplicativo precisa acessar sua localização para melhor experiência.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>O aplicativo precisa acessar sua localização para melhor experiência.</string>
+	<string>O aplicativo precisa acessar sua localização para obter o seu endereço.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>O aplicativo precisa acessar suas fotos para usá-lo em seus dados personalizados.</string>
 	<key>UILaunchStoryboardName</key>
