--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.5.6+4
+version: 1.5.7+6
 
 environment:
   sdk: ">=2.18.2 <3.3.7"
@@ -61,6 +61,7 @@ dependencies:
   hive_flutter: ^1.1.0
   firebase_messaging: ^14.2.1
   cached_network_image: ^3.2.3
+  flutter_masked_text2: ^0.9.1
   
 dependency_overrides:
   firebase_core_platform_interface: 4.5.2
