--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.5.7+6
+version: 1.6.0+1
 
 environment:
   sdk: ">=2.18.2 <3.3.7"
@@ -35,13 +35,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
   flutter_svg: ^1.1.4
-  pinput: ^2.2.12
+  pinput: ^2.2.21
   flutter_typeahead: ^4.0.0
   expandable: ^5.0.1
   flutter_bloc: ^8.1.1
   geolocator: ^9.0.2
   fluttertoast: ^8.0.9
-  modal_bottom_sheet: ^2.1.2
+  modal_bottom_sheet: ^3.0.0-pre
   mask_text_input_formatter: ^2.4.0
   intl: ^0.17.0
   flutter_slidable: ^2.0.0
