--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   hive_flutter: ^1.1.0
   cached_network_image: ^3.2.3
   flutter_masked_text2: ^0.9.1
+  rxdart: ^0.27.7
   
   firebase_messaging: ^14.2.1
   google_mlkit_barcode_scanning: ^0.5.0
