--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jackson Aguiar",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "fastify": "^4.26.0",
+    "fastify-compress": "^4.1.0",
+    "fastify-cors": "^6.1.0",
+    "fastify-helmet": "^7.1.0"
+  }
 }
